# GPMap

./: CMakeLists.txt
OpenGP/doc/: .directory
OpenGP/src/cov/covProd/: CovProd.hpp
OpenGP/src/cov/covSEiso/: CovSEiso.hpp
include/gpmap/: octree_gpmap.hpp
